<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/sale_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/btn_sale"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/sale1_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingRight="10dp"
            android:orientation="horizontal" >
            <EditText
                android:id="@+id/firstname"
				style="@style/edit_text_2"                
                android:hint="@string/surname" />

            <EditText
                android:id="@+id/name"
				style="@style/edit_text_2"                
                android:hint="@string/name" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingRight="10dp"
            android:orientation="horizontal" >

            <EditText
                android:id="@+id/email"
				style="@style/edit_text_3"                
                android:layout_weight="2.5"
                android:hint="@string/email" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="5dp"
                android:layout_weight="0.15"
                android:text="\@"
                android:textColor="@color/blanc"
                android:textSize="25dp" />

            <EditText
                android:id="@+id/email_1"
				style="@style/edit_text_3"                
                android:layout_weight="1.5"
                android:hint="@string/email" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingRight="10dp"
            android:orientation="horizontal" >

            <EditText
                android:id="@+id/postal_code"
				style="@style/edit_text_3"                
                android:layout_weight="1"
                android:hint="@string/postal_code" />

            <Spinner
                android:id="@+id/spinner"
                style="@style/spinner_style"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal" >

            <CheckBox
                android:id="@+id/Newsletter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:button="@drawable/checkbox_selector"
                android:focusable="false"
                android:paddingLeft="@dimen/padding_checkbox"
                android:text="@string/newsletter"
                android:textColor="@color/blanc"
                android:textSize="25sp" />
        </LinearLayout>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/sale2_layout"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_weight="0.5"
        android:background="@color/menu_bar_bg"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/Btn_return"
            style="@style/button_back.enabled" />

        <Button
            android:id="@+id/btn_Cancel"
            style="@style/button_cancel" />

        <Button
            android:id="@+id/btn_Valid"
            style="@style/button_valid.enabled" />
    </RelativeLayout>

</LinearLayout>